force save submission when the user clicks on save
implement can deactivate
add TODO for generic message
small code refactoring

--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
@@ -8,7 +8,7 @@
     <div class="col">
         <div class="d-flex justify-content-center">
             <div class="navigation-item">
-                <button class="btn btn-secondary w-100" (click)="changeExercise(exerciseIndex - 1)">
+                <button class="btn btn-secondary w-100" (click)="changeExercise(exerciseIndex - 1, false)">
                     <span aria-hidden="true">&laquo;</span>
                     <span class="sr-only">Previous</span>
                 </button>
@@ -24,14 +24,14 @@
                         i <= exerciseIndex + itemsVisiblePerSide - (exerciseIndex - itemsVisiblePerSide <= 0 ? exerciseIndex - itemsVisiblePerSide : 0)
                     "
                 >
-                    <button class="btn w-100" [ngClass]="setExerciseButtonStatus(i)" (click)="changeExercise(i)">
+                    <button class="btn w-100" [ngClass]="setExerciseButtonStatus(i)" (click)="changeExercise(i, false)">
                         <fa-icon [icon]="icon"></fa-icon>
                     </button>
                     <div class="exerciseIndex">{{ i + 1 }}</div>
                 </div>
             </ng-container>
             <div class="navigation-item">
-                <button class="btn btn-secondary w-100" (click)="changeExercise(exerciseIndex + 1)">
+                <button class="btn btn-secondary w-100" (click)="changeExercise(exerciseIndex + 1, false)">
                     <span aria-hidden="true">&raquo;</span>
                     <span class="sr-only">Next</span>
                 </button>
