Exam Date validation for create & update (#1764)

--- a/src/main/webapp/app/exam/manage/exams/exam-update.component.html
+++ b/src/main/webapp/app/exam/manage/exams/exam-update.component.html
@@ -29,6 +29,7 @@
                     <jhi-date-time-picker
                         labelName="{{ 'artemisApp.examManagement.visibleDate' | translate }}"
                         [(ngModel)]="exam.visibleDate"
+                        [error]="!isValidVisibleDate"
                         name="visibleDate"
                         id="visibleDate"
                     ></jhi-date-time-picker>
@@ -37,6 +38,7 @@
                     <jhi-date-time-picker
                         labelName="{{ 'artemisApp.examManagement.startDate' | translate }}"
                         [(ngModel)]="exam.startDate"
+                        [error]="!isValidStartDate"
                         name="startDate"
                         id="startDate"
                     ></jhi-date-time-picker>
@@ -45,6 +47,7 @@
                     <jhi-date-time-picker
                         labelName="{{ 'artemisApp.examManagement.endDate' | translate }}"
                         [(ngModel)]="exam.endDate"
+                        [error]="!isValidEndDate"
                         name="endDate"
                         id="endDate"
                     ></jhi-date-time-picker>
@@ -74,7 +77,7 @@
             </div>
             <div class="form-group">
                 <label for="startText" jhiTranslate="artemisApp.examManagement.endText">End Text</label>
-                <jhi-markdown-editor id="startText" class="markdown-editor" [(markdown)]="exam.endText" [enableResize]="true"></jhi-markdown-editor>
+                <jhi-markdown-editor id="endText" class="markdown-editor" [(markdown)]="exam.endText" [enableResize]="true"></jhi-markdown-editor>
             </div>
             <div class="form-group">
                 <label for="startText" jhiTranslate="artemisApp.examManagement.confirmationStartText">Confirmation Start Text</label>
@@ -88,7 +91,7 @@
                 <button type="button" class="btn btn-secondary" (click)="previousState()">
                     <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel"> Cancel</span>
                 </button>
-                <button type="submit" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary">
+                <button type="submit" [disabled]="editForm.form.invalid || !isValidEndDate || isSaving" class="btn btn-primary">
                     <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
                 </button>
             </div>
