--- a/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
@@ -37,7 +37,17 @@
 
     <div class="mb-3">
         <h5><span jhiTranslate="artemisApp.studentExams.workingTime">Working time</span></h5>
-        {{ studentExam.workingTime | artemisDurationFromSeconds }}
+        <form class="d-flex" [formGroup]="workingTimeForm" (ngSubmit)="saveWorkingTime()">
+            <div class="mr-2">
+                <input formControlName="hours" type="number" style="width: 50px; height: 35px;" class="text-center" min="0" step="1" required /> :
+                <input formControlName="minutes" type="number" style="width: 50px; height: 35px;" class="text-center" min="0" max="59" step="1" required /> :
+                <input formControlName="seconds" type="number" style="width: 50px; height: 35px;" class="text-center" min="0" max="59" step="1" required />
+            </div>
+            <button type="submit" class="btn btn-primary" [disabled]="workingTimeForm.invalid || isSavingWorkingTime">
+                <fa-icon [icon]="'save'"></fa-icon>
+                <span jhiTranslate="entity.action.save">Save</span>
+            </button>
+        </form>
     </div>
 
     <div class="mb-3">
