--- a/src/main/webapp/app/exercises/programming/shared/code-editor/actions/code-editor-actions.component.html
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/actions/code-editor-actions.component.html
@@ -18,6 +18,30 @@
 </div>
 <ng-template #standardActions>
     <button
+        id="refresh_button"
+        type="button"
+        class="btn btn-primary navbar-btn mr-3"
+        [jhiFeatureToggle]="FeatureToggle.PROGRAMMING_EXERCISES"
+        [overwriteDisabled]="
+            disableActions ||
+            commitState === CommitState.PULLING ||
+            editorState === EditorState.UNSAVED_CHANGES ||
+            commitState === CommitState.COMMITTING ||
+            commitState === CommitState.COULD_NOT_BE_RETRIEVED
+        "
+        (click)="onRefresh()"
+        data-toggle="tooltip"
+        data-placement="left"
+        title="Refresh all files. This will overwrite all uncommitted changes."
+    >
+        <span *ngIf="commitState === CommitState.REFRESHING">
+            <fa-icon [icon]="'circle-notch'" [spin]="true"></fa-icon> <span jhiTranslate="artemisApp.editor.refreshing">Refreshing</span>
+        </span>
+        <span *ngIf="commitState !== CommitState.REFRESHING"
+            ><fa-icon [icon]="['far', 'sync']"></fa-icon> <span jhiTranslate="artemisApp.editor.refresh.performRefresh">Refresh</span></span
+        >
+    </button>
+    <button
         id="save_button"
         type="button"
         class="guided-tour-save-button btn btn-primary navbar-btn mr-3"
@@ -34,9 +58,9 @@
         data-placement="left"
         title="Save all unsaved changes in your files."
     >
-        <span *ngIf="editorState === EditorState.SAVING"
-            ><fa-icon [icon]="'circle-notch'" [spin]="true"></fa-icon> <span jhiTranslate="artemisApp.editor.saving">Saving</span></span
-        >
+        <span *ngIf="editorState === EditorState.SAVING">
+            <fa-icon [icon]="'circle-notch'" [spin]="true"></fa-icon> <span jhiTranslate="artemisApp.editor.saving">Saving</span>
+        </span>
         <span *ngIf="editorState !== EditorState.SAVING"><fa-icon [icon]="['far', 'save']"></fa-icon> <span jhiTranslate="artemisApp.editor.saveFiles">Save Files</span></span>
     </button>
     <button
