--- a/src/main/webapp/app/exercises/text/manage/text-exercise/text-exercise-update.component.html
+++ b/src/main/webapp/app/exercises/text/manage/text-exercise/text-exercise-update.component.html
@@ -163,7 +163,7 @@
                 To create an example submission, you first need to finish creating the text exercise.
             </div>
             <div class="alert alert-info" *ngIf="isImport" jhiTranslate="artemisApp.textExercise.import.exampleSubmissionsRequireExercise">
-                T
+                To create an example submission, you first need to finish importing the text exercise
             </div>
         </div>
         <div class="form-group" *ngIf="textExercise.id && !isExamMode && !isImport">
