add last commit hash

--- a/src/main/webapp/app/exam/participate/summary/exercises/programming-exam-summary/programming-exam-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exercises/programming-exam-summary/programming-exam-summary.component.html
@@ -3,4 +3,8 @@
     <span>
         <a href="{{ this.participation?.repositoryUrl }}" target="_blank" rel="noopener noreferrer">{{ this.participation?.repositoryUrl }}</a>
     </span>
+    <span>Last Commit Hash:</span>
+    <span>
+        <span>{{ this.submission.commitHash }}</span>
+    </span>
 </h6>
