--- a/src/main/webapp/app/exercises/programming/shared/code-editor/status/code-editor-status.component.html
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/status/code-editor-status.component.html
@@ -38,5 +38,9 @@
             <fa-icon [icon]="['fas', 'circle-notch']" class="text-info mr-1" [spin]="true" ngbTooltip="{{ 'artemisApp.editor.submittingChangesTooltip' | translate }}"></fa-icon>
             <span class="text-info">{{ 'artemisApp.editor.submittingChanges' | translate }}</span>
         </div>
+        <div *ngSwitchCase="CommitState.REFRESHING">
+            <fa-icon [icon]="['fas', 'circle-notch']" class="text-info mr-1" [spin]="true" ngbTooltip="{{ 'artemisApp.editor.refreshingFilesTooltip' | translate }}"></fa-icon>
+            <span class="text-info">{{ 'artemisApp.editor.refreshingFiles' | translate }}</span>
+        </div>
     </div>
 </div>
