ng-container to template -> do not show always

--- a/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
@@ -55,9 +55,9 @@
                     <jhi-file-upload-exam-summary [submission]="getSubmissionForExercise(exercise)"></jhi-file-upload-exam-summary>
                 </ng-container>
             </ng-container>
-            <ng-container #noSubmission>
+            <ng-template #noSubmission>
                 You didn't submit any solution for this exercise
-            </ng-container>
+            </ng-template>
         </div>
     </div>
 </div>
