--- a/src/main/webapp/app/exam/participate/summary/exercises/programming-exam-summary/programming-exam-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exercises/programming-exam-summary/programming-exam-summary.component.html
@@ -3,7 +3,7 @@
     <span>
         <a href="{{ this.participation?.repositoryUrl }}" target="_blank" rel="noopener noreferrer">{{ this.participation?.repositoryUrl }}</a>
     </span>
-    <span>Last Commit Hash:</span>
+    <span>{{ 'artemisApp.exam.examSummary.lastCommitHash' | translate }}:</span>
     <span>
         <span>{{ this.submission.commitHash }}</span>
     </span>
