fix js formatting

--- a/src/main/webapp/app/exercises/programming/shared/code-editor/actions/code-editor-actions.component.html
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/actions/code-editor-actions.component.html
@@ -71,10 +71,7 @@
         class="guided-tour-submit-button btn btn-success navbar-btn"
         [jhiFeatureToggle]="FeatureToggle.PROGRAMMING_EXERCISES"
         [overwriteDisabled]="
-            disableActions ||
-            isBuilding ||
-            editorState === EditorState.SAVING ||
-            (commitState !== CommitState.UNCOMMITTED_CHANGES && commitState !== CommitState.CLEAN)
+            disableActions || isBuilding || editorState === EditorState.SAVING || (commitState !== CommitState.UNCOMMITTED_CHANGES && commitState !== CommitState.CLEAN)
         "
         (click)="commit()"
         data-toggle="tooltip"
