translate no submission found

--- a/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
@@ -56,7 +56,7 @@
                 </ng-container>
             </ng-container>
             <ng-template #noSubmission>
-                You didn't submit any solution for this exercise
+                {{ 'artemisApp.exam.examSummary.noSubmissionFound' | translate }}
             </ng-template>
         </div>
     </div>
