--- a/src/main/webapp/app/exercises/programming/shared/code-editor/actions/code-editor-actions.component.html
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/actions/code-editor-actions.component.html
@@ -22,9 +22,7 @@
         type="button"
         class="btn btn-primary navbar-btn mr-3"
         [jhiFeatureToggle]="FeatureToggle.PROGRAMMING_EXERCISES"
-        [overwriteDisabled]="
-            disableActions || isBuilding || commitState === CommitState.REFRESHING || editorState === EditorState.SAVING || commitState === CommitState.COMMITTING
-        "
+        [overwriteDisabled]="disableActions || isBuilding || commitState === CommitState.REFRESHING || editorState === EditorState.SAVING || commitState === CommitState.COMMITTING"
         (click)="onRefresh()"
         data-toggle="tooltip"
         data-placement="left"
