--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="exam; else noExam">
+<ng-container *ngIf="exam">
     <jhi-exam-participation-cover
         [startView]="true"
         [exam]="exam"
@@ -6,23 +6,22 @@
         (onExamStarted)="examStarted($event)"
     ></jhi-exam-participation-cover>
 
-    <div class="d-flex my-2">
-        <jhi-alert></jhi-alert>
-    </div>
-
-    <ng-container *ngIf="studentExam">
-        <jhi-exam-participation-summary *ngIf="isOver()" [studentExam]="studentExam"></jhi-exam-participation-summary>
+    <ng-container *ngIf="studentExam; else alert">
         <!-- exam participation -->
-        <ng-container *ngIf="isVisible() && isActive() && !isOver() && examConfirmed">
+        <ng-container *ngIf="isVisible() && isActive() && !isOver() && examConfirmed; else alert">
             <!-- exam nav -->
             <!-- exercises -->
-            <ng-container *ngIf="activeExercise.studentParticipations && activeExercise.studentParticipations[0]">
+            <ng-container *ngIf="activeExercise.studentParticipations && activeExercise.studentParticipations[0]; else alert">
                 <jhi-exam-navigation-bar
                     id="exam-navigation-bar"
                     [exercises]="studentExam.exercises"
                     [endDate]="exam.endDate"
                     (onExerciseChanged)="onExerciseChange($event)"
+                    (examAboutToEnd)="triggerSave(false, true)"
                 ></jhi-exam-navigation-bar>
+                <div class="d-flex my-2">
+                    <jhi-alert></jhi-alert>
+                </div>
                 <ng-container *ngFor="let exercise of studentExam.exercises; let i = index">
                     <ng-container *ngIf="submissionComponentVisited[i]">
                         <ng-container [ngSwitch]="exercise.type">
@@ -93,8 +92,15 @@
                 </div>
             </div>
         </ng-container>
+        <jhi-exam-participation-summary *ngIf="isOver()" [studentExam]="studentExam"></jhi-exam-participation-summary>
     </ng-container>
+    <ng-template #alert>
+        <div class="d-flex my-2">
+            <jhi-alert></jhi-alert>
+        </div>
+    </ng-template>
 </ng-container>
-<ng-template #noExam>
+<!-- no exam -->
+<ng-container *ngIf="!loadingExam && !exam">
     <p jhiTranslate="artemisApp.examParticipation.noExam"></p>
-</ng-template>
+</ng-container>
