--- a/src/main/webapp/app/exam/manage/student-exams/student-exams.component.html
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exams.component.html
@@ -5,20 +5,22 @@
                 <span jhiTranslate="artemisApp.studentExams.title">Student exams</span>
             </h2>
         </div>
-        <div class="ml-auto d-flex">
+        <div class="ml-auto">
+            <div class="d-flex mb-1">
+                <button class="btn btn-primary ml-1" style="height: 40px;" (click)="handleGenerateStudentExams()" *ngIf="course?.isAtLeastInstructor" [disabled]="isLoading">
+                    <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                    <span jhiTranslate="artemisApp.studentExams.generateStudentExams">Generate student exams</span>
+                </button>
+                <button class="btn btn-primary ml-1" style="height: 40px;" (click)="generateMissingStudentExams()" *ngIf="course?.isAtLeastInstructor" [disabled]="isLoading">
+                    <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                    <span jhiTranslate="artemisApp.studentExams.generateMissingStudentExams">Generate missing individual exams</span>
+                </button>
+                <button class="btn btn-primary ml-1" style="height: 40px;" (click)="startExercises()" *ngIf="course?.isAtLeastInstructor" [disabled]="isLoading">
+                    <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                    <span jhiTranslate="artemisApp.studentExams.startExercises">Start Exercises</span>
+                </button>
+            </div>
             <jhi-student-exam-status *ngIf="!isLoading" [hasStudentsWithoutExam]="hasStudentsWithoutExam"></jhi-student-exam-status>
-            <button class="btn btn-primary ml-1" style="height: 40px;" (click)="handleGenerateStudentExams()" *ngIf="course?.isAtLeastInstructor" [disabled]="isLoading">
-                <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                <span jhiTranslate="artemisApp.studentExams.generateStudentExams">Generate student exams</span>
-            </button>
-            <button class="btn btn-primary ml-1" style="height: 40px;" (click)="generateMissingStudentExams()" *ngIf="course?.isAtLeastInstructor" [disabled]="isLoading">
-                <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                <span jhiTranslate="artemisApp.studentExams.generateMissingStudentExams">Generate missing individual exams</span>
-            </button>
-            <button class="btn btn-primary ml-1" style="height: 40px;" (click)="startExercises()" *ngIf="course?.isAtLeastInstructor" [disabled]="isLoading">
-                <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                <span jhiTranslate="artemisApp.studentExams.startExercises">Start Exercises</span>
-            </button>
         </div>
     </div>
     <jhi-alert></jhi-alert>
