--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -17,7 +17,7 @@
                     [exercises]="studentExam.exercises"
                     [endDate]="exam.endDate"
                     (onExerciseChanged)="onExerciseChange($event)"
-                    (examAboutToEnd)="triggerSave(false, true)"
+                    (examAboutToEnd)="examEnded()"
                 ></jhi-exam-navigation-bar>
                 <div class="d-flex my-2">
                     <jhi-alert></jhi-alert>
