Code Editor: Set submission.isSynced === CommitState.CLEAN.
Signed-off-by: Jan Philip Bernius <janphilip.bernius@tum.de>

--- a/src/main/webapp/app/exam/participate/exercises/programming/code-editor/exam-code-editor-student-container.component.html
+++ b/src/main/webapp/app/exam/participate/exercises/programming/code-editor/exam-code-editor-student-container.component.html
@@ -25,6 +25,7 @@
             [(commitState)]="commitState"
             (onSavedFiles)="onSavedFiles($event)"
             (onError)="onError($event)"
+            (commitStateChange)="onCommitStateChange($event)"
         ></jhi-code-editor-actions>
     </div>
     <jhi-code-editor-file-browser
