--- a/src/main/webapp/app/exercises/shared/exercise-row-buttons/exercise-row-buttons.component.html
+++ b/src/main/webapp/app/exercises/shared/exercise-row-buttons/exercise-row-buttons.component.html
@@ -30,6 +30,16 @@
     </button>
 
     <button
+        *ngIf="examMode && exercise.type === exerciseType.QUIZ"
+        type="submit"
+        [routerLink]="['/course-management', courseId, 'quiz-exercises', exercise.id, 'quiz-point-statistic']"
+        class="btn btn-info btn-sm mr-1"
+    >
+        <fa-icon [icon]="'signal'"></fa-icon>
+        <span class="d-none d-md-inline" jhiTranslate="artemisApp.quizExercise.statistics">Statistics</span>
+    </button>
+
+    <button
         type="submit"
         *ngIf="!examMode && exercise.teamMode && exercise.isAtLeastTutor"
         [routerLink]="['/course-management', courseId, 'exercises', exercise.id, 'teams']"
